src/objects/Time_Off_Request__c.object
<CustomObject>
    <customHelp>TOM_User_Guide</customHelp>
    <description>TOM: A request for time-off, such as PTO, floating holidays, etc.  A time-off request may be for 1 or more days.</description>
    <fields>
        <fullName>Balance_Correction__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this if you are correcting a previously submitted request for time off that you are no longer going to take.</inlineHelpText>
        <label>Reverse previously processed request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments_text__c</fullName>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <label>Date Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Awaiting_Approval__c</fullName>
        <formula>ROUND( NOW() - Date_Submitted__c , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Awaiting Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Description__c</fullName>
        <formula>Employee_Number__c &amp; &quot; - &quot; &amp; Employee_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <label>Employee Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>The last day of the requested time off.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>I_accept_terms__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>By checking this checkbox, you are acknowledging that you have read the negative balance terms and agree to bound by them.</inlineHelpText>
        <label>I accept terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Negative_Balance_Terms__c</fullName>
        <defaultValue>&quot;I understand that Salesforce.com may allow me to take advance PTO (up to 40 hours). In order to receive this advance, I authorize Salesforce.com to deduct the borrowed PTO from my future vacation accruals. These deductions shall continue each pay period until such time as the total hours of borrowed paid time off advanced to me have been reimbursed in full or until the termination of my employment with Company for any reason, whichever occurs first.  In the event my employment with the Company terminates for any reason before I repay this PTO advance, I acknowledge and agree that any remaining PTO advance shall be deducted by Salesforce.com from my final paycheck upon termination so long as that deduction does not exceed the amount of the deductions that have been regularly made from my paycheck. However, if the outstanding amount of my vacation advance exceeds this regular deduction, I also agree to repay Salesforce.com for any additional vacation advance owed by me upon the date of my employment termination either by payment of a personal check or by authorizing a deduction from my final paycheck for the remaining balance.&quot;</defaultValue>
        <label>Negative Balance Terms</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_Absolute__c</fullName>
        <label>Number of Days (Absolute)</label>
        <summaryForeignKey>Requested_Day__c.Time_Off_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Days__c</fullName>
        <formula>IF(Balance_Correction__c, -1 *  Number_of_Days_Absolute__c ,  Number_of_Days_Absolute__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of business days between the Start Date and End Date of this request.  Does not include weekends or company holidays.  This is the number of days that will be deducted from your time-off balance.</inlineHelpText>
        <label>Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payroll_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payroll System</label>
        <referenceTo>Payroll_System__c</referenceTo>
        <relationshipName>Time_Off_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pending_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pending Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Policy_Exception__c</fullName>
        <formula>IF( Start_Date__c &lt;  DATEVALUE(Date_Submitted__c),  IMAGE( &quot;/img/samples/flag_red.gif&quot;, &quot;red flag&quot;) &amp;  &quot;  Request submitted after start of time-off.&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The policy exception flag indicates that a request does not comply with one or more company policies. (e.g., a request submitted after the time-off was already taken)</inlineHelpText>
        <label>Policy Exception</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Off_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>The first day of the requested time off.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Requires Re-Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_image__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; &amp;     CASE( Status__c,      &quot;Not Submitted&quot;, &quot;0156A000001HTLb&quot;,      &quot;Pending Approval&quot;, &quot;0156A000001HTLc&quot;,      &quot;Approved&quot;, &quot;0156A000001HTLd&quot;,      &quot;Processed&quot;, &quot;0156A000001HTLe&quot;,      &quot;Canceled&quot;, &quot;0156A000001HTLf&quot;,      &quot;Requires Re-Approval&quot;, &quot;0156A000001HTLg&quot;,      &quot;Rejected&quot;, &quot;0156A000001HTLh&quot;,    &quot;&quot;) ,    CASE( Status__c,      &quot;Not Submitted&quot;, &quot;Not Submitted&quot;,      &quot;Pending Approval&quot;, &quot;Pending Approval&quot;,      &quot;Approved&quot;, &quot;Approved&quot;,      &quot;Processed&quot;, &quot;Processed&quot;,      &quot;Canceled&quot;, &quot;Canceled&quot;,      &quot;Requires Re-Approval&quot;, &quot;Requires Re-Approval&quot;,      &quot;Rejected&quot;, &quot;Rejected&quot;,    &quot;Unknown Status&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Status of this request.  If the lock icon is displayed, it means the request cannot be edited in its current status.</inlineHelpText>
        <label>&amp;nbsp;Status</label>
        <type>Text</type>
    </fields>
    <label>Time-Off Request</label>
    <listViews>
        <fullName>AllTimeOffRequests</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Number_of_Days__c</columns>
        <columns>Status_image__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Time-Off Requests</label>
    </listViews>
    <listViews>
        <fullName>ApprovedRequests</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Number_of_Days__c</columns>
        <columns>Status_image__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Approval,Pending 2nd Level Approval,Approved,Processed</value>
        </filters>
        <label>Approved Requests</label>
    </listViews>
    <listViews>
        <fullName>PendingApproval</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Number_of_Days__c</columns>
        <columns>Status_image__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Approval</value>
        </filters>
        <label>Pending Approval</label>
    </listViews>
    <listViews>
        <fullName>RejectedRequests</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Number_of_Days__c</columns>
        <columns>Status_image__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected Requests</label>
    </listViews>
    <listViews>
        <fullName>Time_Off_Manager_Payroll</fullName>
        <filterScope>Queue</filterScope>
        <label>Time_Off_Manager_Payroll</label>
        <queue>Time_Off_Manager_Payroll</queue>
    </listViews>
    <listViews>
        <fullName>UnsubmittedRequests</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Number_of_Days__c</columns>
        <columns>Status_image__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Submitted,Rejected,Requires Re-Approval</value>
        </filters>
        <label>Unsubmitted Requests</label>
    </listViews>
    <nameField>
        <displayFormat>TO-{YYMMDD}-{0}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time-Off Requests</pluralLabel>
    <recordTypes>
        <fullName>TESTApproved</fullName>
        <active>true</active>
        <label>TEST-Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>TESTCanceled</fullName>
        <active>true</active>
        <label>TEST-Canceled</label>
    </recordTypes>
    <recordTypes>
        <fullName>TESTNotSubmitted</fullName>
        <active>true</active>
        <label>TEST-Not Submitted</label>
    </recordTypes>
    <recordTypes>
        <fullName>TESTPendingApproval</fullName>
        <active>true</active>
        <label>TEST-Pending Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>TESTProcessed</fullName>
        <active>true</active>
        <label>TEST-Processed</label>
    </recordTypes>
    <recordTypes>
        <fullName>TESTRejected</fullName>
        <active>true</active>
        <label>TEST-Rejected</label>
    </recordTypes>
    <recordTypes>
        <fullName>TESTRequiresReApproval</fullName>
        <active>true</active>
        <label>TEST-Requires Re-Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>USApproved</fullName>
        <active>true</active>
        <label>US-Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>USCanceled</fullName>
        <active>true</active>
        <label>US-Canceled</label>
    </recordTypes>
    <recordTypes>
        <fullName>USNotSubmitted</fullName>
        <active>true</active>
        <label>US-Not Submitted</label>
    </recordTypes>
    <recordTypes>
        <fullName>USPendingApproval</fullName>
        <active>true</active>
        <label>US-Pending Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>USProcessed</fullName>
        <active>true</active>
        <label>US-Processed</label>
    </recordTypes>
    <recordTypes>
        <fullName>USRejected</fullName>
        <active>true</active>
        <label>US-Rejected</label>
    </recordTypes>
    <recordTypes>
        <fullName>USRequiresReApproval</fullName>
        <active>true</active>
        <label>US-Requires Re-Approval</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>End_Date_Cannot_Come_Before_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &lt;  Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>The End Date cannot be before the Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(NULLVALUE(End_Date__c , null) = null)</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>The End Date is Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>I_accept_terms_checkbox_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( I_accept_terms__c )</errorConditionFormula>
        <errorDisplayField>I_accept_terms__c</errorDisplayField>
        <errorMessage>Please read the negative balance terms and check the &quot;I accept terms&quot; checkbox</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(NULLVALUE(Start_Date__c , null) = null)</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>The Start Date is Required</errorMessage>
    </validationRules>
</CustomObject>